2011-01-10  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Pass through ‘integrity’ field in RCS file.

	* base.h (struct repo): Add member ‘integrity’.
	(tiny_integrity): New var decl, via ‘TINY_DECL’.
	* b-anchor.c (tiny_integrity): New var, via ‘TINYK’.
	* b-grok.c (full): Recognize ‘integrity’ prior to ‘comment’.
	* rcsgen.c (putadmin): Output integrity info, if available.

2011-01-07  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Fix bug: Account for $(EXEEXT) in .help filenames.

	Omission from 2010-03-19, "Use GNU Automake".

	* Makefile.am (BUILT_SOURCES): Include $(EXEEXT)
	in source part of ‘$(VAR:SOURCE=TARGET)’ reference.

2010-11-29  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Release: 5.7.95

2010-11-29  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[grok] Recognize duplicate delta log; throw error.

	Omission from 2010-05-24, "Rewrite parsing".
	* b-grok.c (full <edits>): Signal "duplicate delta log"
	error if a log already exists for a particular delta.

2010-11-29  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[grok] Fix bug: Check all branch forward references for match.

	* b-grok.c (fwref): New struct.
	(full): Keep track of line number of branch references, too;
	after reading tree, check that all refs were indeed matched.

2010-11-29  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[grok] Fix bug: Check that new branch was forward referenced.

	* b-grok.c (full): Keep track of branch references;
	check that new branches are properly forward-referenced.

2010-11-29  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[grok] Fix bug: Check that branches begin w/ branch point.

	* b-grok.c (full <revisions>): Check that
	branches begin with the branch point revision.

2010-11-19  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Fix bug: For unchanged checkin on branch, prune ‘newdelta’.

	Expansion of 2010-11-14, "Fix bug: For
	unchanged checkin, invalidate ‘newdelta’".
	* ci.c (prune): New static func.
	(main): On unchanged checkin, use ‘prune’;
	incorporate ‘newdelta’ invalidation into ‘prune’.
