@@ -1,5 +1,13 @@
 2011-01-10  Thien-Thi Nguyen  <ttn@gnuvola.org>
 
+	[int] Add abstractions: semi_lf, SEMI_LF
+
+	* rcsgen.c (semi_lf): New const string.
+	(SEMI_LF): New macro.
+	(putadmin, putdelta): Use ‘semi_lf’, ‘SEMI_LF’.
+
+2011-01-10  Thien-Thi Nguyen  <ttn@gnuvola.org>
+
 	Pass through ‘integrity’ field in RCS file.
 
 	* base.h (struct repo): Add member ‘integrity’.
